# vrm-pi-three-vrm-goal-target

./: .gitignore  ASSET_LICENSE.txt  CLAUDE.md  README.md  index.html  package-lock.json  package.json  preview.html  proof-a.mjs  proof-b.mjs  proof-c.mjs  proof-d.mjs  proof-e.mjs  proof-f.mjs  proof-g.mjs  proof-h.mjs  tsconfig.json  vite.config.ts
.claude/skills/dance-to-vrma/: SKILL.md
colab/: dance_to_smpl.ipynb
docs/: dance-video-to-vrma-plan.md  video-to-vrma-usage.md
docs/superpowers/specs/: 2026-06-14-standalone-vrm-desktop-pet-design.md
pi/: AGENTS.md  vrm-tools.ts
proofs/: setup-handless.sh
proofs/corpus/sessions/greet/: 2026-06-14_greet.md
proofs/handless-evidence/: events.handless.deepseek.jsonl  events.proof-b.local-qwen.jsonl  meta.json  scenario.json  transcript.md
public/avatars/: SOURCES.md
public/vrma/: SOURCES.md  clips.json  generated_demo.vrma
server/: vrm-api.mjs
src/: main.ts  preview.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  rules.rs  sensors.rs
src/motion/: MotionController.ts  actions.ts  clips.ts
tools/: extract_pose.py  make-vrma-from-pose.mjs  make-vrma-hybrid.mjs  make-vrma-kalidokit.mjs  make-vrma.mjs  render-vrma-preview.mjs  smpl-to-vrma.mjs  video-to-vrma.mjs
